# MAI-OOP_6

./: CMakeLists.txt  README.md  log.txt  test_world.txt  world.txt
.devcontainer/: Dockerfile  devcontainer.json
lab6/: CMakeLists.txt  main.cpp
lab6/include/: Dragon.hpp  FightVisitor.hpp  Knight.hpp  NPC.hpp  NPCFactory.hpp  Observer.hpp  Pegasus.hpp  World.hpp
lab6/src/: FightVisitor.cpp
lab6/tests/: tests.cpp
